--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -294,3 +294,10 @@ GHORG_RECLONE_PATH:
 # Quiet logging output with reclone command
 # flag (--quiet)
 GHORG_RECLONE_QUIET: false
+
+# +-+-+-+-+-+ +-+-+-+-+-+-+-+ +-+-+-+-+-+-+
+# |G|H|O|R|G| |R|E|C|L|O|N|E| |S|E|R|V|E|R|
+# +-+-+-+-+-+ +-+-+-+-+-+-+-+ +-+-+-+-+-+-+
+
+
+GHORG_RECLONE_SERVER_PORT: ":8080"
