--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -299,5 +299,10 @@ GHORG_RECLONE_QUIET: false
 # |G|H|O|R|G| |R|E|C|L|O|N|E| |S|E|R|V|E|R|
 # +-+-+-+-+-+ +-+-+-+-+-+-+-+ +-+-+-+-+-+-+
 
-
 GHORG_RECLONE_SERVER_PORT: ":8080"
+
+# +-+-+-+-+-+ +-+-+-+-+-+-+-+ +-+-+-+-+
+# |G|H|O|R|G| |R|E|C|L|O|N|E| |C|R|O|N|
+# +-+-+-+-+-+ +-+-+-+-+-+-+-+ +-+-+-+-+
+
+GHORG_CRON_TIMER_MINUTES: "60"
