--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -298,3 +298,19 @@ GHORG_RECLONE_PATH:
 # Quiet logging output with reclone command
 # flag (--quiet)
 GHORG_RECLONE_QUIET: false
+
+# +-+-+-+-+-+ +-+-+-+-+-+-+-+ +-+-+-+-+-+-+
+# |G|H|O|R|G| |R|E|C|L|O|N|E| |S|E|R|V|E|R|
+# +-+-+-+-+-+ +-+-+-+-+-+-+-+ +-+-+-+-+-+-+
+
+# Port to run the relcone server on
+# flag (--port) e.g. --port=3000
+GHORG_RECLONE_SERVER_PORT: ":8080"
+
+# +-+-+-+-+-+ +-+-+-+-+-+-+-+ +-+-+-+-+
+# |G|H|O|R|G| |R|E|C|L|O|N|E| |C|R|O|N|
+# +-+-+-+-+-+ +-+-+-+-+-+-+-+ +-+-+-+-+
+
+# Number of minutes to run the cron on
+# flag (--minutes) e.g. --minutes=1440
+GHORG_CRON_TIMER_MINUTES: "60"
