--- a/.github/workflows/docker-build-release.yml
+++ b/.github/workflows/docker-build-release.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          platforms: linux/arm64,linux/amd64,linux/arm/v7
+          platforms: linux/arm64,linux/amd64,linux/arm/v7,windows/amd64
           push: true
           tags: |
             ghcr.io/${{ github.repository }}:${{ env.docker_latest_tag }}
