feat: add post_exec_script support
- Add optional post_exec_script field to reclone configuration
- Call defined script after clone completion
- Update documentation and sample configuration

--- a/sample-reclone.yaml
+++ b/sample-reclone.yaml
@@ -16,6 +16,7 @@
 # Example for gitlab; update with your gitlab cloud token
 gitlab-examples:
   cmd: "ghorg clone gitlab-examples --scm=gitlab --preserve-dir --token=XXXXXXX"
+  post_exec_script: "/path/to/notify.sh"
 
 # Examples from README.md; update with your github cloud token
 kubernetes:
