--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -53,6 +53,12 @@ GHORG_PRESERVE_SCM_HOSTNAME: false
 # flag (--git-filter) eg: --git-filter=blob:none
 GHORG_GIT_FILTER:
 
+# Enable or disable automatic synchronization with default branches when recloning repositories
+# When enabled, ghorg will attempt to sync local repositories with their default remote branches
+# default: false (sync disabled)
+# flag (--sync-default-branch) eg: --sync-default-branch
+GHORG_SYNC_DEFAULT_BRANCH: false
+
 # Deletes all files/directories found in your local clone directory that are not found on the remote (e.g., after remote deletion).  With GHORG_SKIP_ARCHIVED set, archived repositories will also be pruned from your local clone.
 # Will prompt before deleting any files unless used in combination with --prune-no-confirm
 # flag (--prune)
