--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ debug
 coverage.out
 
 dist/
+
+# GitLab integration test Go binaries (platform-specific, built locally)
+scripts/local-gitlab/seeder/gitlab-seeder
+scripts/local-gitlab/test-runner/gitlab-test-runner
