--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ dist/
 # GitLab integration test Go binaries (platform-specific, built locally)
 scripts/local-gitlab/seeder/gitlab-seeder
 scripts/local-gitlab/test-runner/gitlab-test-runner
+scripts/local-gitea/seeder/gitea-seeder
+scripts/local-gitea/test-runner/gitea-test-runner
