Add Bitbucket Server support and integration tests
Extends Bitbucket SCM support to include self-hosted Bitbucket Server instances, adds new flags and environment variables for insecure connections, and updates documentation and examples. Introduces scripts and configuration for local Bitbucket Server integration testing, including Docker Compose setup, seeding, and test runner scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ scripts/local-gitlab/seeder/gitlab-seeder
 scripts/local-gitlab/test-runner/gitlab-test-runner
 scripts/local-gitea/seeder/gitea-seeder
 scripts/local-gitea/test-runner/gitea-test-runner
+scripts/local-bitbucket/seeder/bitbucket-seeder
+scripts/local-bitbucket/test-runner/bitbucket-test-runner
