Add Sourcehut SCM support and integration tests
Introduces Sourcehut as a supported SCM provider with user/org cloning, protocol selection, and username normalization. Adds Sourcehut documentation, configuration options, integration test scripts for Linux and Windows, and comprehensive unit tests. Updates workflow and README to reflect Sourcehut support and usage details.

--- a/.github/workflows/go-build-test.yml
+++ b/.github/workflows/go-build-test.yml
@@ -34,6 +34,12 @@ jobs:
         run: scripts/gitlab_cloud_integration_tests.sh
         env:
           GITLAB_TOKEN: ${{ secrets.GHORG_GITLAB_TOKEN }}
+      - name: Run Sourcehut Cloud Integration Tests
+        run: scripts/sourcehut_cloud_integration_tests.sh
+        env:
+          SOURCEHUT_TOKEN: ${{ secrets.GHORG_SOURCEHUT_TOKEN }}
+          SOURCEHUT_TEST_USER: ${{ secrets.GHORG_SOURCEHUT_TEST_USER }}
+          SOURCEHUT_TEST_REPO: ${{ secrets.GHORG_SOURCEHUT_TEST_REPO }}
   build_and_test_windows:
     environment: actions
     name: Build and Test Windows
@@ -71,3 +77,15 @@ jobs:
         run: scripts/windows_gitlab_integration_tests.bat
         env:
           GITLAB_TOKEN: ${{ secrets.GHORG_GITLAB_TOKEN }}
+      - name: Run Sourcehut Cloud Integration Tests Linux
+        run: scripts/sourcehut_cloud_integration_tests.sh
+        env:
+          SOURCEHUT_TOKEN: ${{ secrets.GHORG_SOURCEHUT_TOKEN }}
+          SOURCEHUT_TEST_USER: ${{ secrets.GHORG_SOURCEHUT_TEST_USER }}
+          SOURCEHUT_TEST_REPO: ${{ secrets.GHORG_SOURCEHUT_TEST_REPO }}
+      - name: Run Sourcehut Cloud Integration Tests Windows
+        run: scripts/windows_sourcehut_integration_tests.bat
+        env:
+          SOURCEHUT_TOKEN: ${{ secrets.GHORG_SOURCEHUT_TOKEN }}
+          SOURCEHUT_TEST_USER: ${{ secrets.GHORG_SOURCEHUT_TEST_USER }}
+          SOURCEHUT_TEST_REPO: ${{ secrets.GHORG_SOURCEHUT_TEST_REPO }}
